# interactive-graphics

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/common/: Common.h  Shader.h
common/include/glad/: glad.h
common/src/: Shader.cpp  glad.c
projects/1-Transformations/: CMakeLists.txt
projects/1-Transformations/shaders/: vertex.vert
projects/1-Transformations/src/: main.cpp
projects/2-Shading/: CMakeLists.txt
